trunk/Archive/f2403878781ceaf32d00a74b3cf13ff9-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:29:5: error: static assertion failed: 
     static_assert(std::is_same<typename GetResultType<Test>::type, int>::value, "");
     ^
